@@ -17,10 +17,12 @@
 	{
 		const CLASS_FINAL		= 'final';
 		const CLASS_ABSTRACT	= 'abstract';
+		const CLASS_SPOOKED		= 'spooked';
 		
 		protected $names = array(
 			self::CLASS_FINAL		=> self::CLASS_FINAL,
-			self::CLASS_ABSTRACT	=> self::CLASS_ABSTRACT
+			self::CLASS_ABSTRACT	=> self::CLASS_ABSTRACT,
+			self::CLASS_SPOOKED		=> self::CLASS_SPOOKED
 		);
 	}
 ?>
